// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`composeCalendar should compose a nav, header, grid and date component correctly 1`] = `
<div
  className="bpk-calendar bpk-calendar--fixed"
>
  <Nav
    changeMonthLabel="Change month"
    formatMonth={[Function]}
    id="myCalendar__bpk_calendar_nav"
    maxDate={2010-03-15T00:00:00.000Z}
    minDate={2010-02-15T00:00:00.000Z}
    month={2010-02-15T00:00:00.000Z}
    onMonthChange={[Function]}
  />
  <Header
    className="bpk-calendar__header"
    daysOfWeek={
      Array [
        Object {
          "index": 0,
          "isWeekend": true,
          "name": "Sunday",
          "nameAbbr": "Sun",
          "nameNarrow": "S",
        },
        Object {
          "index": 1,
          "isWeekend": false,
          "name": "Monday",
          "nameAbbr": "Mon",
          "nameNarrow": "M",
        },
        Object {
          "index": 2,
          "isWeekend": false,
          "name": "Tuesday",
          "nameAbbr": "Tue",
          "nameNarrow": "T",
        },
        Object {
          "index": 3,
          "isWeekend": false,
          "name": "Wednesday",
          "nameAbbr": "Wed",
          "nameNarrow": "W",
        },
        Object {
          "index": 4,
          "isWeekend": false,
          "name": "Thursday",
          "nameAbbr": "Thu",
          "nameNarrow": "T",
        },
        Object {
          "index": 5,
          "isWeekend": false,
          "name": "Friday",
          "nameAbbr": "Fri",
          "nameNarrow": "F",
        },
        Object {
          "index": 6,
          "isWeekend": true,
          "name": "Saturday",
          "nameAbbr": "Sat",
          "nameNarrow": "S",
        },
      ]
    }
    showWeekendSeparator={true}
    weekDayKey="nameAbbr"
    weekStartsOn={1}
  />
  <Grid
    DateComponent="Date"
    className=""
    dateModifiers={Object {}}
    dateProps={null}
    daysOfWeek={
      Array [
        Object {
          "index": 0,
          "isWeekend": true,
          "name": "Sunday",
          "nameAbbr": "Sun",
          "nameNarrow": "S",
        },
        Object {
          "index": 1,
          "isWeekend": false,
          "name": "Monday",
          "nameAbbr": "Mon",
          "nameNarrow": "M",
        },
        Object {
          "index": 2,
          "isWeekend": false,
          "name": "Tuesday",
          "nameAbbr": "Tue",
          "nameNarrow": "T",
        },
        Object {
          "index": 3,
          "isWeekend": false,
          "name": "Wednesday",
          "nameAbbr": "Wed",
          "nameNarrow": "W",
        },
        Object {
          "index": 4,
          "isWeekend": false,
          "name": "Thursday",
          "nameAbbr": "Thu",
          "nameNarrow": "T",
        },
        Object {
          "index": 5,
          "isWeekend": false,
          "name": "Friday",
          "nameAbbr": "Fri",
          "nameNarrow": "F",
        },
        Object {
          "index": 6,
          "isWeekend": true,
          "name": "Saturday",
          "nameAbbr": "Sat",
          "nameNarrow": "S",
        },
      ]
    }
    focusedDate={null}
    formatDateFull={[Function]}
    formatMonth={[Function]}
    markOutsideDays={true}
    markToday={true}
    maxDate={2010-03-15T00:00:00.000Z}
    minDate={2010-02-15T00:00:00.000Z}
    month={2010-02-15T00:00:00.000Z}
    onDateClick={[Function]}
    onDateKeyDown={[Function]}
    preventKeyboardFocus={false}
    selectedDate={null}
    showWeekendSeparator={true}
    weekStartsOn={1}
  />
</div>
`;

exports[`composeCalendar should pass props to their respective components 1`] = `
<div
  className="bpk-calendar bpk-calendar--fixed"
>
  Nav
  Header
  <div>
    <h1>
      Grid
    </h1>
    Date
  </div>
</div>
`;

exports[`composeCalendar should render with "fixedWidth" set to false 1`] = `
<div
  className="bpk-calendar"
>
  <Nav
    changeMonthLabel="Change month"
    formatMonth={[Function]}
    id="myCalendar__bpk_calendar_nav"
    maxDate={2010-03-15T00:00:00.000Z}
    minDate={2010-02-15T00:00:00.000Z}
    month={2010-02-15T00:00:00.000Z}
    onMonthChange={[Function]}
  />
  <Header
    className="bpk-calendar__header"
    daysOfWeek={
      Array [
        Object {
          "index": 0,
          "isWeekend": true,
          "name": "Sunday",
          "nameAbbr": "Sun",
          "nameNarrow": "S",
        },
        Object {
          "index": 1,
          "isWeekend": false,
          "name": "Monday",
          "nameAbbr": "Mon",
          "nameNarrow": "M",
        },
        Object {
          "index": 2,
          "isWeekend": false,
          "name": "Tuesday",
          "nameAbbr": "Tue",
          "nameNarrow": "T",
        },
        Object {
          "index": 3,
          "isWeekend": false,
          "name": "Wednesday",
          "nameAbbr": "Wed",
          "nameNarrow": "W",
        },
        Object {
          "index": 4,
          "isWeekend": false,
          "name": "Thursday",
          "nameAbbr": "Thu",
          "nameNarrow": "T",
        },
        Object {
          "index": 5,
          "isWeekend": false,
          "name": "Friday",
          "nameAbbr": "Fri",
          "nameNarrow": "F",
        },
        Object {
          "index": 6,
          "isWeekend": true,
          "name": "Saturday",
          "nameAbbr": "Sat",
          "nameNarrow": "S",
        },
      ]
    }
    showWeekendSeparator={true}
    weekDayKey="nameAbbr"
    weekStartsOn={1}
  />
  <Grid
    DateComponent="Date"
    className=""
    dateModifiers={Object {}}
    dateProps={null}
    daysOfWeek={
      Array [
        Object {
          "index": 0,
          "isWeekend": true,
          "name": "Sunday",
          "nameAbbr": "Sun",
          "nameNarrow": "S",
        },
        Object {
          "index": 1,
          "isWeekend": false,
          "name": "Monday",
          "nameAbbr": "Mon",
          "nameNarrow": "M",
        },
        Object {
          "index": 2,
          "isWeekend": false,
          "name": "Tuesday",
          "nameAbbr": "Tue",
          "nameNarrow": "T",
        },
        Object {
          "index": 3,
          "isWeekend": false,
          "name": "Wednesday",
          "nameAbbr": "Wed",
          "nameNarrow": "W",
        },
        Object {
          "index": 4,
          "isWeekend": false,
          "name": "Thursday",
          "nameAbbr": "Thu",
          "nameNarrow": "T",
        },
        Object {
          "index": 5,
          "isWeekend": false,
          "name": "Friday",
          "nameAbbr": "Fri",
          "nameNarrow": "F",
        },
        Object {
          "index": 6,
          "isWeekend": true,
          "name": "Saturday",
          "nameAbbr": "Sat",
          "nameNarrow": "S",
        },
      ]
    }
    focusedDate={null}
    formatDateFull={[Function]}
    formatMonth={[Function]}
    markOutsideDays={true}
    markToday={true}
    maxDate={2010-03-15T00:00:00.000Z}
    minDate={2010-02-15T00:00:00.000Z}
    month={2010-02-15T00:00:00.000Z}
    onDateClick={[Function]}
    onDateKeyDown={[Function]}
    preventKeyboardFocus={false}
    selectedDate={null}
    showWeekendSeparator={true}
    weekStartsOn={1}
  />
</div>
`;

exports[`composeCalendar should render with custom className prop correctly 1`] = `
<div
  className="bpk-calendar my-custom-class bpk-calendar--fixed"
>
  <Nav
    changeMonthLabel="Change month"
    formatMonth={[Function]}
    id="myCalendar__bpk_calendar_nav"
    maxDate={2010-03-15T00:00:00.000Z}
    minDate={2010-02-15T00:00:00.000Z}
    month={2010-02-15T00:00:00.000Z}
    onMonthChange={[Function]}
  />
  <Header
    className="bpk-calendar__header"
    daysOfWeek={
      Array [
        Object {
          "index": 0,
          "isWeekend": true,
          "name": "Sunday",
          "nameAbbr": "Sun",
          "nameNarrow": "S",
        },
        Object {
          "index": 1,
          "isWeekend": false,
          "name": "Monday",
          "nameAbbr": "Mon",
          "nameNarrow": "M",
        },
        Object {
          "index": 2,
          "isWeekend": false,
          "name": "Tuesday",
          "nameAbbr": "Tue",
          "nameNarrow": "T",
        },
        Object {
          "index": 3,
          "isWeekend": false,
          "name": "Wednesday",
          "nameAbbr": "Wed",
          "nameNarrow": "W",
        },
        Object {
          "index": 4,
          "isWeekend": false,
          "name": "Thursday",
          "nameAbbr": "Thu",
          "nameNarrow": "T",
        },
        Object {
          "index": 5,
          "isWeekend": false,
          "name": "Friday",
          "nameAbbr": "Fri",
          "nameNarrow": "F",
        },
        Object {
          "index": 6,
          "isWeekend": true,
          "name": "Saturday",
          "nameAbbr": "Sat",
          "nameNarrow": "S",
        },
      ]
    }
    showWeekendSeparator={true}
    weekDayKey="nameAbbr"
    weekStartsOn={1}
  />
  <Grid
    DateComponent="Date"
    className=""
    dateModifiers={Object {}}
    dateProps={null}
    daysOfWeek={
      Array [
        Object {
          "index": 0,
          "isWeekend": true,
          "name": "Sunday",
          "nameAbbr": "Sun",
          "nameNarrow": "S",
        },
        Object {
          "index": 1,
          "isWeekend": false,
          "name": "Monday",
          "nameAbbr": "Mon",
          "nameNarrow": "M",
        },
        Object {
          "index": 2,
          "isWeekend": false,
          "name": "Tuesday",
          "nameAbbr": "Tue",
          "nameNarrow": "T",
        },
        Object {
          "index": 3,
          "isWeekend": false,
          "name": "Wednesday",
          "nameAbbr": "Wed",
          "nameNarrow": "W",
        },
        Object {
          "index": 4,
          "isWeekend": false,
          "name": "Thursday",
          "nameAbbr": "Thu",
          "nameNarrow": "T",
        },
        Object {
          "index": 5,
          "isWeekend": false,
          "name": "Friday",
          "nameAbbr": "Fri",
          "nameNarrow": "F",
        },
        Object {
          "index": 6,
          "isWeekend": true,
          "name": "Saturday",
          "nameAbbr": "Sat",
          "nameNarrow": "S",
        },
      ]
    }
    focusedDate={null}
    formatDateFull={[Function]}
    formatMonth={[Function]}
    markOutsideDays={true}
    markToday={true}
    maxDate={2010-03-15T00:00:00.000Z}
    minDate={2010-02-15T00:00:00.000Z}
    month={2010-02-15T00:00:00.000Z}
    onDateClick={[Function]}
    onDateKeyDown={[Function]}
    preventKeyboardFocus={false}
    selectedDate={null}
    showWeekendSeparator={true}
    weekStartsOn={1}
  />
</div>
`;

exports[`composeCalendar should render without a header element 1`] = `
<div
  className="bpk-calendar bpk-calendar--fixed"
>
  <Nav
    changeMonthLabel="Change month"
    formatMonth={[Function]}
    id="myCalendar__bpk_calendar_nav"
    maxDate={2010-03-15T00:00:00.000Z}
    minDate={2010-02-15T00:00:00.000Z}
    month={2010-02-15T00:00:00.000Z}
    onMonthChange={[Function]}
  />
  <Grid
    DateComponent="Date"
    className="bpk-calendar__grid"
    dateModifiers={Object {}}
    dateProps={null}
    daysOfWeek={
      Array [
        Object {
          "index": 0,
          "isWeekend": true,
          "name": "Sunday",
          "nameAbbr": "Sun",
          "nameNarrow": "S",
        },
        Object {
          "index": 1,
          "isWeekend": false,
          "name": "Monday",
          "nameAbbr": "Mon",
          "nameNarrow": "M",
        },
        Object {
          "index": 2,
          "isWeekend": false,
          "name": "Tuesday",
          "nameAbbr": "Tue",
          "nameNarrow": "T",
        },
        Object {
          "index": 3,
          "isWeekend": false,
          "name": "Wednesday",
          "nameAbbr": "Wed",
          "nameNarrow": "W",
        },
        Object {
          "index": 4,
          "isWeekend": false,
          "name": "Thursday",
          "nameAbbr": "Thu",
          "nameNarrow": "T",
        },
        Object {
          "index": 5,
          "isWeekend": false,
          "name": "Friday",
          "nameAbbr": "Fri",
          "nameNarrow": "F",
        },
        Object {
          "index": 6,
          "isWeekend": true,
          "name": "Saturday",
          "nameAbbr": "Sat",
          "nameNarrow": "S",
        },
      ]
    }
    focusedDate={null}
    formatDateFull={[Function]}
    formatMonth={[Function]}
    markOutsideDays={true}
    markToday={true}
    maxDate={2010-03-15T00:00:00.000Z}
    minDate={2010-02-15T00:00:00.000Z}
    month={2010-02-15T00:00:00.000Z}
    onDateClick={[Function]}
    onDateKeyDown={[Function]}
    preventKeyboardFocus={false}
    selectedDate={null}
    showWeekendSeparator={true}
    weekStartsOn={1}
  />
</div>
`;

exports[`composeCalendar should render without a nav or header element 1`] = `
<div
  className="bpk-calendar bpk-calendar--fixed"
>
  <Grid
    DateComponent="Date"
    className=""
    dateModifiers={Object {}}
    dateProps={null}
    daysOfWeek={
      Array [
        Object {
          "index": 0,
          "isWeekend": true,
          "name": "Sunday",
          "nameAbbr": "Sun",
          "nameNarrow": "S",
        },
        Object {
          "index": 1,
          "isWeekend": false,
          "name": "Monday",
          "nameAbbr": "Mon",
          "nameNarrow": "M",
        },
        Object {
          "index": 2,
          "isWeekend": false,
          "name": "Tuesday",
          "nameAbbr": "Tue",
          "nameNarrow": "T",
        },
        Object {
          "index": 3,
          "isWeekend": false,
          "name": "Wednesday",
          "nameAbbr": "Wed",
          "nameNarrow": "W",
        },
        Object {
          "index": 4,
          "isWeekend": false,
          "name": "Thursday",
          "nameAbbr": "Thu",
          "nameNarrow": "T",
        },
        Object {
          "index": 5,
          "isWeekend": false,
          "name": "Friday",
          "nameAbbr": "Fri",
          "nameNarrow": "F",
        },
        Object {
          "index": 6,
          "isWeekend": true,
          "name": "Saturday",
          "nameAbbr": "Sat",
          "nameNarrow": "S",
        },
      ]
    }
    focusedDate={null}
    formatDateFull={[Function]}
    formatMonth={[Function]}
    markOutsideDays={true}
    markToday={true}
    maxDate={2010-03-15T00:00:00.000Z}
    minDate={2010-02-15T00:00:00.000Z}
    month={2010-02-15T00:00:00.000Z}
    onDateClick={[Function]}
    onDateKeyDown={[Function]}
    preventKeyboardFocus={false}
    selectedDate={null}
    showWeekendSeparator={true}
    weekStartsOn={1}
  />
</div>
`;
